meilisearch/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    external-dns.alpha.kubernetes.io/hostname: search.devnet.holaplex.tools
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "600"
  name: meilisearch
  namespace: devnet-meilisearch
spec:
  ingressClassName: nginx
  rules:
  - host: search.devnet.holaplex.tools
    http:
      paths:
      - backend:
          service:
            name: meilisearch
            port:
              number: 7700
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - search.devnet.holaplex.tools
    secretName: meilisearch-tls
